Wed Sep  8 14:42:36 UTC 2010  William Otte  <wotte@zifnab>

        * Release:

          Removing obsolete release makefile.

Wed Sep  8 13:14:03 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * *.cpp:
          Removed RCS_ID

Wed Sep  8 06:16:03 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3068_Regression/test_i.h:
          Fixed compile error

Wed Sep  8 06:00:00 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/Fault_Detector/FT_FaultDetectorFactory_i.cpp:
        * orbsvcs/examples/Notify/Federation/Gate/Gate.cpp:
        * orbsvcs/tests/FT_App/FT_ReplicaFactory_i.cpp:
          Fixed compile errors

        * tao/Acceptor_Registry.h:
          Use ACE_Copy_Disabled

Tue Sep  7 18:07:16 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * utils/logWalker/Log.cpp:
          Added missing include

Tue Sep  7 11:34:14 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/BiDir_GIOP/BiDirGIOP.cpp:
        * tao/IORManipulation/IORManip_Loader.cpp:
        * tao/PortableServer/RequestProcessingStrategyServantLocator.cpp:
        * tao/Strategies/SCIOP_Endpoint.cpp:
        * tao/Utils/Servant_Var.cpp:
          Fuzz fixes

Tue Sep  7 10:52:59 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * PROBLEM-REPORT-FORM:
        * VERSION:
          Updated support email addresses

        * examples/CSD_Strategy/ThreadPool2/FooServantList.h:
        * examples/CSD_Strategy/ThreadPool2/FooServantList.cpp:
          Use ACE_Atomic_Op instead of a mutex with a guard

        * examples/CSD_Strategy/ThreadPool5/FooServantList.h:
        * examples/CSD_Strategy/ThreadPool5/FooServantList.cpp:
          Use ACE_GUARD

        * orbsvcs/Fault_Detector/FT_FaultDetectorFactory_i.h:
        * orbsvcs/Fault_Detector/FT_FaultDetectorFactory_i.cpp:
          Use ACE_GUARD

        * orbsvcs/Fault_Notifier/FT_Notifier_i.h:
          Removed not used members
