@@ -8,7 +8,7 @@ TAO::SSLIOP::Accept_Strategy::Accept_Strategy (
   TAO_ORB_Core * orb_core,
   const ACE_Time_Value & timeout)
   : TAO_Accept_Strategy<TAO::SSLIOP::Connection_Handler,
-                        ACE_SSL_SOCK_ACCEPTOR> (orb_core),
+                        ACE_SSL_SOCK_Acceptor> (orb_core),
     timeout_ (timeout)
 {
 }
